# zosia2026_talk

./: README.md  examples.ipynb  generate_plots.py  presentation.md  pyproject.toml  results.jsonl  run_all.py
case_a_pytorch/: 0_baseline.py  1_fast_loader.py  2_inference_mode.py  3_compile.py  3_tensor_cores.py  4_amp.py  4_compile.py  5_amp.py  6_vram_caching.py  7_fused_optimizer.py  8_fused_optimizer.py
case_b_data_processing/: 0_pandas.py  1_polars_eager.py  2_polars_lazy.py  download_data.py
case_c_evolution/: 0_pure_python.py  1_numpy_vectorized.py  2_numpy_argpartition.py  3_numba_jit.py
examples/: demo.py  dis_bytecode.py  kernel_fusion.py  prange_demo.py  sum_rows_vs_cols.py
examples/pytorch_optimization/: 0_baseline.py  1_fast_loader.py  5_amp.py  6_vram_caching.py  7_cudnn_benchmark.py
