[project]
name = "zosia2026-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
